@@ -1,3 +1,7 @@
+2002-10-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* XmlTextReaderTests.cs: fixed TestEntityReferenceInsideText.
+
 2002-10-22  Nick Drochak  <ndrochak@gol.com>
 
 	* XmlTextWriterTests.cs: Null is ok when prefix is "xmlns".
